--- a/Zirpl.Examples.CodeGeneration.VS2013.V2.Commerce.CodeGeneration/AppTransform.json
+++ b/Zirpl.Examples.CodeGeneration.VS2013.V2.Commerce.CodeGeneration/AppTransform.json
@@ -84,6 +84,7 @@
           "IsForMarkDeletedInterface": false,
           "IsForExtendableInterface": false,
           "IsForExtendedEntityFieldValueInterface": false,
+          "IsForIsStaticLookupInterface": false,
           "IsNullable": false,
           "IsRequired": false,
           "IsMaxLength": false,
@@ -110,6 +111,7 @@
           "IsForMarkDeletedInterface": false,
           "IsForExtendableInterface": false,
           "IsForExtendedEntityFieldValueInterface": false,
+          "IsForIsStaticLookupInterface": false,
           "IsNullable": false,
           "IsRequired": false,
           "IsMaxLength": false,
@@ -136,6 +138,7 @@
           "IsForMarkDeletedInterface": false,
           "IsForExtendableInterface": false,
           "IsForExtendedEntityFieldValueInterface": false,
+          "IsForIsStaticLookupInterface": false,
           "IsNullable": false,
           "IsRequired": true,
           "IsMaxLength": false,
@@ -162,6 +165,7 @@
           "IsForMarkDeletedInterface": false,
           "IsForExtendableInterface": false,
           "IsForExtendedEntityFieldValueInterface": false,
+          "IsForIsStaticLookupInterface": false,
           "IsNullable": false,
           "IsRequired": true,
           "IsMaxLength": false,
@@ -188,6 +192,7 @@
           "IsForMarkDeletedInterface": false,
           "IsForExtendableInterface": false,
           "IsForExtendedEntityFieldValueInterface": false,
+          "IsForIsStaticLookupInterface": false,
           "IsNullable": true,
           "IsRequired": true,
           "IsMaxLength": false,
@@ -214,6 +219,7 @@
           "IsForMarkDeletedInterface": false,
           "IsForExtendableInterface": false,
           "IsForExtendedEntityFieldValueInterface": false,
+          "IsForIsStaticLookupInterface": false,
           "IsNullable": true,
           "IsRequired": true,
           "IsMaxLength": false,
@@ -240,6 +246,7 @@
           "IsForMarkDeletedInterface": false,
           "IsForExtendableInterface": true,
           "IsForExtendedEntityFieldValueInterface": false,
+          "IsForIsStaticLookupInterface": false,
           "IsNullable": false,
           "IsRequired": false,
           "IsMaxLength": false,
@@ -295,6 +302,7 @@
                   "IsForMarkDeletedInterface": false,
                   "IsForExtendableInterface": false,
                   "IsForExtendedEntityFieldValueInterface": false,
+                  "IsForIsStaticLookupInterface": false,
                   "IsNullable": false,
                   "IsRequired": false,
                   "IsMaxLength": false,
@@ -321,6 +329,7 @@
                   "IsForMarkDeletedInterface": false,
                   "IsForExtendableInterface": false,
                   "IsForExtendedEntityFieldValueInterface": false,
+                  "IsForIsStaticLookupInterface": false,
                   "IsNullable": false,
                   "IsRequired": false,
                   "IsMaxLength": false,
@@ -347,6 +356,7 @@
                   "IsForMarkDeletedInterface": false,
                   "IsForExtendableInterface": false,
                   "IsForExtendedEntityFieldValueInterface": false,
+                  "IsForIsStaticLookupInterface": false,
                   "IsNullable": false,
                   "IsRequired": true,
                   "IsMaxLength": false,
@@ -373,6 +383,7 @@
                   "IsForMarkDeletedInterface": false,
                   "IsForExtendableInterface": false,
                   "IsForExtendedEntityFieldValueInterface": false,
+                  "IsForIsStaticLookupInterface": false,
                   "IsNullable": false,
                   "IsRequired": true,
                   "IsMaxLength": false,
@@ -399,6 +410,7 @@
                   "IsForMarkDeletedInterface": false,
                   "IsForExtendableInterface": false,
                   "IsForExtendedEntityFieldValueInterface": false,
+                  "IsForIsStaticLookupInterface": false,
                   "IsNullable": true,
                   "IsRequired": true,
                   "IsMaxLength": false,
@@ -425,6 +437,7 @@
                   "IsForMarkDeletedInterface": false,
                   "IsForExtendableInterface": false,
                   "IsForExtendedEntityFieldValueInterface": false,
+                  "IsForIsStaticLookupInterface": false,
                   "IsNullable": true,
                   "IsRequired": true,
                   "IsMaxLength": false,
@@ -451,6 +464,7 @@
                   "IsForMarkDeletedInterface": false,
                   "IsForExtendableInterface": false,
                   "IsForExtendedEntityFieldValueInterface": true,
+                  "IsForIsStaticLookupInterface": false,
                   "IsNullable": false,
                   "IsRequired": true,
                   "IsMaxLength": false,
@@ -479,6 +493,7 @@
                   "IsForMarkDeletedInterface": false,
                   "IsForExtendableInterface": false,
                   "IsForExtendedEntityFieldValueInterface": true,
+                  "IsForIsStaticLookupInterface": false,
                   "IsNullable": false,
                   "IsRequired": true,
                   "IsMaxLength": false,
@@ -507,6 +522,7 @@
                   "IsForMarkDeletedInterface": false,
                   "IsForExtendableInterface": false,
                   "IsForExtendedEntityFieldValueInterface": true,
+                  "IsForIsStaticLookupInterface": false,
                   "IsNullable": false,
                   "IsRequired": false,
                   "IsMaxLength": true,
@@ -754,6 +770,7 @@
           "IsForMarkDeletedInterface": false,
           "IsForExtendableInterface": false,
           "IsForExtendedEntityFieldValueInterface": false,
+          "IsForIsStaticLookupInterface": false,
           "IsNullable": false,
           "IsRequired": false,
           "IsMaxLength": false,
@@ -780,6 +797,7 @@
           "IsForMarkDeletedInterface": false,
           "IsForExtendableInterface": false,
           "IsForExtendedEntityFieldValueInterface": false,
+          "IsForIsStaticLookupInterface": true,
           "IsNullable": false,
           "IsRequired": true,
           "IsMaxLength": false,
