refactors to reduce dependencies within TextTemplating classes in  CodeGeneration project

--- a/Zirpl.AppEngine.CodeGeneration.VS2013/Zirpl.AppEngine.CodeGeneration.VS2013.csproj
+++ b/Zirpl.AppEngine.CodeGeneration.VS2013/Zirpl.AppEngine.CodeGeneration.VS2013.csproj
@@ -48,6 +48,7 @@
     <Reference Include="envdte90a, Version=9.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
       <EmbedInteropTypes>False</EmbedInteropTypes>
     </Reference>
+    <Reference Include="Microsoft.VisualStudio.OLE.Interop, Version=7.1.40304.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
     <Reference Include="Microsoft.VisualStudio.Shell.12.0, Version=12.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
     <Reference Include="Microsoft.VisualStudio.Shell.Interop, Version=7.1.40304.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
     <Reference Include="Microsoft.VisualStudio.Shell.Interop.10.0, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
@@ -90,141 +91,6 @@
     <Compile Include="TextTemplating\VisualStudioExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TextTemplating\LogHelper.cs" />
-    <Compile Include="V1\ConfigModel\AppDefinition.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="V1\ConfigModel\DataServiceOptions.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="V1\ConfigModel\DomainType.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="V1\ConfigModel\Entry.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="V1\ConfigModel\Property.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="V1\ConfigModel\SerializableOptions.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="V1\ConfigModel\ServiceOptions.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="V1\ConfigModel\WebOptions.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="V1\PartialTemplateClasses.cs">
-      <DependentUpon>PartialTemplateClasses.tt</DependentUpon>
-      <SubType>Code</SubType>
-      <DesignTime>True</DesignTime>
-      <AutoGen>True</AutoGen>
-    </Compile>
-    <Compile Include="V1\Templates\DataService\DataServiceInterfaceTemplate.cs">
-      <DependentUpon>DataServiceInterfaceTemplate.tt</DependentUpon>
-      <SubType>Code</SubType>
-      <DesignTime>True</DesignTime>
-      <AutoGen>True</AutoGen>
-    </Compile>
-    <Compile Include="V1\Templates\DataService\EntityFramework\DataContextTemplate.cs">
-      <DependentUpon>DataContextTemplate.tt</DependentUpon>
-      <SubType>Code</SubType>
-      <DesignTime>True</DesignTime>
-      <AutoGen>True</AutoGen>
-    </Compile>
-    <Compile Include="V1\Templates\DataService\EntityFramework\DataServiceTemplate.cs">
-      <DependentUpon>DataServiceTemplate.tt</DependentUpon>
-      <SubType>Code</SubType>
-      <DesignTime>True</DesignTime>
-      <AutoGen>True</AutoGen>
-    </Compile>
-    <Compile Include="V1\Templates\DataService\EntityFramework\Mapping\MappingTemplate.cs">
-      <DependentUpon>MappingTemplate.tt</DependentUpon>
-      <SubType>Code</SubType>
-      <DesignTime>True</DesignTime>
-      <AutoGen>True</AutoGen>
-    </Compile>
-    <Compile Include="V1\Templates\Model\Customization\CustomFieldValueTemplate.cs">
-      <DependentUpon>CustomFieldValueTemplate.tt</DependentUpon>
-      <SubType>Code</SubType>
-      <DesignTime>True</DesignTime>
-      <AutoGen>True</AutoGen>
-    </Compile>
-    <Compile Include="V1\Templates\Model\EnumTemplate.cs">
-      <DependentUpon>EnumTemplate.tt</DependentUpon>
-      <SubType>Code</SubType>
-      <DesignTime>True</DesignTime>
-      <AutoGen>True</AutoGen>
-    </Compile>
-    <Compile Include="V1\Templates\Model\Metadata\Constants\MetadataConstantsTemplate.cs">
-      <DependentUpon>MetadataConstantsTemplate.tt</DependentUpon>
-      <SubType>Code</SubType>
-      <DesignTime>True</DesignTime>
-      <AutoGen>True</AutoGen>
-    </Compile>
-    <Compile Include="V1\Templates\Model\ModelTemplate.cs">
-      <DependentUpon>ModelTemplate.tt</DependentUpon>
-      <SubType>Code</SubType>
-      <DesignTime>True</DesignTime>
-      <AutoGen>True</AutoGen>
-    </Compile>
-    <Compile Include="V1\Templates\Service\EntityFramework\ServiceTemplate.cs">
-      <DependentUpon>ServiceTemplate.tt</DependentUpon>
-      <SubType>Code</SubType>
-      <DesignTime>True</DesignTime>
-      <AutoGen>True</AutoGen>
-    </Compile>
-    <Compile Include="V1\Templates\Service\ServiceInterfaceTemplate.cs">
-      <DependentUpon>ServiceInterfaceTemplate.tt</DependentUpon>
-      <SubType>Code</SubType>
-      <DesignTime>True</DesignTime>
-      <AutoGen>True</AutoGen>
-    </Compile>
-    <Compile Include="V1\Templates\Tests\Common\PeristableModelTestsStrategyTemplate.cs">
-      <DependentUpon>PeristableModelTestsStrategyTemplate.tt</DependentUpon>
-      <SubType>Code</SubType>
-      <DesignTime>True</DesignTime>
-      <AutoGen>True</AutoGen>
-    </Compile>
-    <Compile Include="V1\Templates\Tests\Common\PersistableModelTestsEntityWrapperTemplate.cs">
-      <DependentUpon>PersistableModelTestsEntityWrapperTemplate.tt</DependentUpon>
-      <SubType>Code</SubType>
-      <DesignTime>True</DesignTime>
-      <AutoGen>True</AutoGen>
-    </Compile>
-    <Compile Include="V1\Templates\Tests\DataService\DataServicesProviderTemplate.cs">
-      <DependentUpon>DataServicesProviderTemplate.tt</DependentUpon>
-      <SubType>Code</SubType>
-      <DesignTime>True</DesignTime>
-      <AutoGen>True</AutoGen>
-    </Compile>
-    <Compile Include="V1\Templates\Tests\DataService\EntityFramework\DataServiceTestsTemplate.cs">
-      <DependentUpon>DataServiceTestsTemplate.tt</DependentUpon>
-      <SubType>Code</SubType>
-      <DesignTime>True</DesignTime>
-      <AutoGen>True</AutoGen>
-    </Compile>
-    <Compile Include="V1\Templates\Tests\Service\EntityFramework\ServiceTestsTemplate.cs">
-      <DependentUpon>ServiceTestsTemplate.tt</DependentUpon>
-      <SubType>Code</SubType>
-      <DesignTime>True</DesignTime>
-      <AutoGen>True</AutoGen>
-    </Compile>
-    <Compile Include="V1\Templates\Tests\Service\ServicesProviderTemplate.cs">
-      <DependentUpon>ServicesProviderTemplate.tt</DependentUpon>
-      <SubType>Code</SubType>
-      <DesignTime>True</DesignTime>
-      <AutoGen>True</AutoGen>
-    </Compile>
-    <Compile Include="V1\Templates\Validation\EntityFramework\FluentValidation\ValidatorTemplate.cs">
-      <DependentUpon>ValidatorTemplate.tt</DependentUpon>
-      <SubType>Code</SubType>
-      <DesignTime>True</DesignTime>
-      <AutoGen>True</AutoGen>
-    </Compile>
-    <Compile Include="V1\V1Helper.cs">
-      <SubType>Code</SubType>
-    </Compile>
     <Compile Include="V2\ConfigModel\AppInfo.cs" />
     <Compile Include="V2\ConfigModel\DomainPropertyInfo.cs" />
     <Compile Include="V2\ConfigModel\DomainTypeInfo.cs" />
@@ -261,78 +127,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
-    <None Include="V1\PartialTemplateClasses.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <LastGenOutput>PartialTemplateClasses.cs</LastGenOutput>
-    </None>
-    <None Include="V1\Templates\DataService\DataServiceInterfaceTemplate.tt">
-      <Generator>TextTemplatingFilePreprocessor</Generator>
-      <LastGenOutput>DataServiceInterfaceTemplate.cs</LastGenOutput>
-    </None>
-    <None Include="V1\Templates\DataService\EntityFramework\DataContextTemplate.tt">
-      <Generator>TextTemplatingFilePreprocessor</Generator>
-      <LastGenOutput>DataContextTemplate.cs</LastGenOutput>
-    </None>
-    <None Include="V1\Templates\DataService\EntityFramework\DataServiceTemplate.tt">
-      <Generator>TextTemplatingFilePreprocessor</Generator>
-      <LastGenOutput>DataServiceTemplate.cs</LastGenOutput>
-    </None>
-    <None Include="V1\Templates\DataService\EntityFramework\Mapping\MappingTemplate.tt">
-      <Generator>TextTemplatingFilePreprocessor</Generator>
-      <LastGenOutput>MappingTemplate.cs</LastGenOutput>
-    </None>
-    <None Include="V1\Templates\Model\Customization\CustomFieldValueTemplate.tt">
-      <Generator>TextTemplatingFilePreprocessor</Generator>
-      <LastGenOutput>CustomFieldValueTemplate.cs</LastGenOutput>
-    </None>
-    <None Include="V1\Templates\Model\EnumTemplate.tt">
-      <Generator>TextTemplatingFilePreprocessor</Generator>
-      <LastGenOutput>EnumTemplate.cs</LastGenOutput>
-    </None>
-    <None Include="V1\Templates\Model\Metadata\Constants\MetadataConstantsTemplate.tt">
-      <Generator>TextTemplatingFilePreprocessor</Generator>
-      <LastGenOutput>MetadataConstantsTemplate.cs</LastGenOutput>
-    </None>
-    <None Include="V1\Templates\Model\ModelTemplate.tt">
-      <Generator>TextTemplatingFilePreprocessor</Generator>
-      <LastGenOutput>ModelTemplate.cs</LastGenOutput>
-    </None>
-    <None Include="V1\Templates\Service\EntityFramework\ServiceTemplate.tt">
-      <Generator>TextTemplatingFilePreprocessor</Generator>
-      <LastGenOutput>ServiceTemplate.cs</LastGenOutput>
-    </None>
-    <None Include="V1\Templates\Service\ServiceInterfaceTemplate.tt">
-      <Generator>TextTemplatingFilePreprocessor</Generator>
-      <LastGenOutput>ServiceInterfaceTemplate.cs</LastGenOutput>
-    </None>
-    <None Include="V1\Templates\Tests\Common\PeristableModelTestsStrategyTemplate.tt">
-      <Generator>TextTemplatingFilePreprocessor</Generator>
-      <LastGenOutput>PeristableModelTestsStrategyTemplate.cs</LastGenOutput>
-    </None>
-    <None Include="V1\Templates\Tests\Common\PersistableModelTestsEntityWrapperTemplate.tt">
-      <Generator>TextTemplatingFilePreprocessor</Generator>
-      <LastGenOutput>PersistableModelTestsEntityWrapperTemplate.cs</LastGenOutput>
-    </None>
-    <None Include="V1\Templates\Tests\DataService\DataServicesProviderTemplate.tt">
-      <Generator>TextTemplatingFilePreprocessor</Generator>
-      <LastGenOutput>DataServicesProviderTemplate.cs</LastGenOutput>
-    </None>
-    <None Include="V1\Templates\Tests\DataService\EntityFramework\DataServiceTestsTemplate.tt">
-      <Generator>TextTemplatingFilePreprocessor</Generator>
-      <LastGenOutput>DataServiceTestsTemplate.cs</LastGenOutput>
-    </None>
-    <None Include="V1\Templates\Tests\Service\EntityFramework\ServiceTestsTemplate.tt">
-      <Generator>TextTemplatingFilePreprocessor</Generator>
-      <LastGenOutput>ServiceTestsTemplate.cs</LastGenOutput>
-    </None>
-    <None Include="V1\Templates\Tests\Service\ServicesProviderTemplate.tt">
-      <Generator>TextTemplatingFilePreprocessor</Generator>
-      <LastGenOutput>ServicesProviderTemplate.cs</LastGenOutput>
-    </None>
-    <None Include="V1\Templates\Validation\EntityFramework\FluentValidation\ValidatorTemplate.tt">
-      <Generator>TextTemplatingFilePreprocessor</Generator>
-      <LastGenOutput>ValidatorTemplate.cs</LastGenOutput>
-    </None>
     <None Include="V2\Templates\Model\PersistableDomainClassTemplate.tt">
       <Generator>TextTemplatingFilePreprocessor</Generator>
       <LastGenOutput>PersistableDomainClassTemplate.cs</LastGenOutput>
