--- a/Zirpl.AppEngine.CodeGeneration.VS2013/Zirpl.AppEngine.CodeGeneration.VS2013.csproj
+++ b/Zirpl.AppEngine.CodeGeneration.VS2013/Zirpl.AppEngine.CodeGeneration.VS2013.csproj
@@ -97,6 +97,7 @@
     <Compile Include="V2\ConfigModel\EnumValueInfo.cs" />
     <Compile Include="V2\ConfigModel\FileGeneration\ClassToGenerate.cs" />
     <Compile Include="TextTemplating\FileToGenerate.cs" />
+    <Compile Include="V2\ConfigModel\Parsers\ConfigFileException.cs" />
     <Compile Include="V2\ConfigModel\Parsers\JsonModel\PropertyJson.cs" />
     <Compile Include="V2\ConfigModel\Parsers\JsonModel\EnumValueJson.cs" />
     <Compile Include="V2\ConfigModel\Parsers\AppFileParser.cs" />
